# INFRA-3DRC-Dataset

./: .gitignore  README.md  _config.yml  pyproject.toml
docs/: ANNOTATION_DETAILS.md  DOWNLOAD_DATASET.md  SDK_USER_GUIDE.md
docs/fixes/: calibration.json  scene.json
infra_3drc/: Infra3DRC.py  __init__.py  class_names.py  frame.py  utils.py
