[tool.poetry]
name = "infra-3drc"
version = "0.1.2"
description = "This is the SDK to extract and perform various operations using INFRA-3DRC public dataset"
authors = ["Shiva Agrawal <shiva.agrawal@thi.de>", "Savankumar Bhanderi <savankumar.bhanderi@thi.de>"]
readme = "docs/SDK_USER_GUIDE.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
matplotlib = "3.4.3"
numpy = "1.21.2"
opencv-contrib-python = "4.5.5.64"
opencv-python = "4.6.0.66"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
